swagger bugs
