# api/docs/swagger.json
@@ -1821,13 +1821,6 @@
                 "summary": "Create Customer",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "shipper",
-                        "name": "Shipper",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
                         "description": "customer",
                         "name": "customer",
                         "in": "body",
@@ -3212,7 +3205,7 @@
                     {
                         "type": "string",
                         "description": "end_time",
-                        "name": "ent_time",
+                        "name": "end_time",
                         "in": "query"
                     }
                 ],
